@@ -1,6 +1,9 @@
 2016-02-28  Benno Schulenberg  <bensberg@justemail.net>
 	* src/rcfile.c (parse_header_exp): Don't continue when something is
 	wrong -- skip the rest of the line.  This fixes Savannah bug #47289.
+	* src/rcfile.c (parse_header_exp, parse_magic_exp, grab_and_store):
+	Use the now correct parsing of header regexes also for parsing magic
+	regexes.  This fixes Savannah bug #47292 and saves 50 lines of code.
 
 2016-02-26  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/man/nanorc.5, doc/texinfo/nano.texi, doc/syntax/nanorc.nanorc,
